parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    KEYWORD
    CONTINUE
    OPERATOR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM id BEGIN pgm_body END
Rule 2     id -> IDENTIFIER
Rule 3     pgm_body -> decl func_declarations
Rule 4     decl -> string_decl decl
Rule 5     decl -> var_decl decl
Rule 6     decl -> empty
Rule 7     string_decl -> STRING id ASSIGN str SEMICOLON
Rule 8     str -> STRINGLITERAL
Rule 9     var_decl -> var_type id_list SEMICOLON
Rule 10    var_type -> FLOAT
Rule 11    var_type -> INT
Rule 12    any_type -> var_type
Rule 13    any_type -> VOID
Rule 14    id_list -> id id_tail
Rule 15    id_tail -> COMMA id id_tail
Rule 16    id_tail -> empty
Rule 17    param_decl_list -> param_decl param_decl_tail
Rule 18    param_decl_list -> empty
Rule 19    param_decl -> var_type id
Rule 20    param_decl_tail -> COMMA param_decl param_decl_tail
Rule 21    param_decl_tail -> empty
Rule 22    func_declarations -> func_decl func_declarations
Rule 23    func_declarations -> empty
Rule 24    func_decl -> start_of_func LPAREN param_decl_list RPAREN BEGIN func_body END
Rule 25    start_of_func -> FUNCTION any_type id
Rule 26    func_body -> decl stmt_list
Rule 27    stmt_list -> stmt stmt_list
Rule 28    stmt_list -> empty
Rule 29    stmt -> base_stmt
Rule 30    stmt -> if_stmt
Rule 31    stmt -> while_stmt
Rule 32    base_stmt -> assign_stmt
Rule 33    base_stmt -> read_stmt
Rule 34    base_stmt -> write_stmt
Rule 35    base_stmt -> return_stmt
Rule 36    assign_stmt -> assign_expr SEMICOLON
Rule 37    assign_expr -> id ASSIGN expr
Rule 38    read_stmt -> READ LPAREN id_list RPAREN SEMICOLON
Rule 39    write_stmt -> WRITE LPAREN id_list RPAREN SEMICOLON
Rule 40    return_stmt -> RETURN expr SEMICOLON
Rule 41    expr -> expr_prefix factor
Rule 42    expr_prefix -> expr_prefix factor addop
Rule 43    expr_prefix -> empty
Rule 44    factor -> factor_prefix postfix_expr
Rule 45    factor_prefix -> factor_prefix postfix_expr mulop
Rule 46    factor_prefix -> empty
Rule 47    postfix_expr -> primary
Rule 48    postfix_expr -> call_expr
Rule 49    call_expr -> id LPAREN expr_list RPAREN
Rule 50    expr_list -> expr expr_list_tail
Rule 51    expr_list -> empty
Rule 52    expr_list_tail -> COMMA expr expr_list_tail
Rule 53    expr_list_tail -> empty
Rule 54    primary -> LPAREN expr RPAREN
Rule 55    primary -> id
Rule 56    primary -> INTLITERAL
Rule 57    primary -> FLOATLITERAL
Rule 58    addop -> PLUS
Rule 59    addop -> MINUS
Rule 60    mulop -> MULTIPLY
Rule 61    mulop -> DIVIDE
Rule 62    if_stmt -> start_if LPAREN cond RPAREN decl stmt_list else_part ENDIF
Rule 63    start_if -> IF
Rule 64    else_part -> start_else decl stmt_list
Rule 65    else_part -> empty
Rule 66    start_else -> ELSE
Rule 67    cond -> expr compop expr
Rule 68    compop -> COMPOP
Rule 69    while_stmt -> start_while LPAREN cond RPAREN decl stmt_list end_while
Rule 70    start_while -> WHILE
Rule 71    end_while -> ENDWHILE
Rule 72    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 7 37
BEGIN                : 1 24
BREAK                : 
COMMA                : 15 20 52
COMPOP               : 68
CONTINUE             : 
DIVIDE               : 61
ELSE                 : 66
END                  : 1 24
ENDIF                : 62
ENDWHILE             : 71
FLOAT                : 10
FLOATLITERAL         : 57
FUNCTION             : 25
IDENTIFIER           : 2
IF                   : 63
INT                  : 11
INTLITERAL           : 56
KEYWORD              : 
LPAREN               : 24 38 39 49 54 62 69
MINUS                : 59
MULTIPLY             : 60
OPERATOR             : 
PLUS                 : 58
PROGRAM              : 1
READ                 : 38
RETURN               : 40
RPAREN               : 24 38 39 49 54 62 69
SEMICOLON            : 7 9 36 38 39 40
STRING               : 7
STRINGLITERAL        : 8
VOID                 : 13
WHILE                : 70
WRITE                : 39
error                : 

Nonterminals, with rules where they appear

addop                : 42
any_type             : 25
assign_expr          : 36
assign_stmt          : 32
base_stmt            : 29
call_expr            : 48
compop               : 67
cond                 : 62 69
decl                 : 3 4 5 26 62 64 69
else_part            : 62
empty                : 6 16 18 21 23 28 43 46 51 53 65
end_while            : 69
expr                 : 37 40 50 52 54 67 67
expr_list            : 49
expr_list_tail       : 50 52
expr_prefix          : 41 42
factor               : 41 42
factor_prefix        : 44 45
func_body            : 24
func_decl            : 22
func_declarations    : 3 22
id                   : 1 7 14 15 19 25 37 49 55
id_list              : 9 38 39
id_tail              : 14 15
if_stmt              : 30
mulop                : 45
param_decl           : 17 20
param_decl_list      : 24
param_decl_tail      : 17 20
pgm_body             : 1
postfix_expr         : 44 45
primary              : 47
program              : 0
read_stmt            : 33
return_stmt          : 35
start_else           : 64
start_if             : 62
start_of_func        : 24
start_while          : 69
stmt                 : 27
stmt_list            : 26 27 62 64 69
str                  : 7
string_decl          : 4
var_decl             : 5
var_type             : 9 12 19
while_stmt           : 31
write_stmt           : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM id BEGIN pgm_body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . id BEGIN pgm_body END
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 3

state 3

    (1) program -> PROGRAM id . BEGIN pgm_body END

    BEGIN           shift and go to state 5


state 4

    (2) id -> IDENTIFIER .

    ASSIGN          reduce using rule 2 (id -> IDENTIFIER .)
    BEGIN           reduce using rule 2 (id -> IDENTIFIER .)
    LPAREN          reduce using rule 2 (id -> IDENTIFIER .)
    COMMA           reduce using rule 2 (id -> IDENTIFIER .)
    SEMICOLON       reduce using rule 2 (id -> IDENTIFIER .)
    MULTIPLY        reduce using rule 2 (id -> IDENTIFIER .)
    DIVIDE          reduce using rule 2 (id -> IDENTIFIER .)
    PLUS            reduce using rule 2 (id -> IDENTIFIER .)
    MINUS           reduce using rule 2 (id -> IDENTIFIER .)
    COMPOP          reduce using rule 2 (id -> IDENTIFIER .)
    RPAREN          reduce using rule 2 (id -> IDENTIFIER .)


state 5

    (1) program -> PROGRAM id BEGIN . pgm_body END
    (3) pgm_body -> . decl func_declarations
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id ASSIGN str SEMICOLON
    (9) var_decl -> . var_type id_list SEMICOLON
    (72) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 72 (empty -> .)
    END             reduce using rule 72 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    decl                           shift and go to state 11
    string_decl                    shift and go to state 7
    empty                          shift and go to state 12
    var_decl                       shift and go to state 13
    pgm_body                       shift and go to state 14
    var_type                       shift and go to state 10

state 6

    (7) string_decl -> STRING . id ASSIGN str SEMICOLON
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 15

state 7

    (4) decl -> string_decl . decl
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id ASSIGN str SEMICOLON
    (9) var_decl -> . var_type id_list SEMICOLON
    (72) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 72 (empty -> .)
    END             reduce using rule 72 (empty -> .)
    READ            reduce using rule 72 (empty -> .)
    WRITE           reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    IDENTIFIER      reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    ENDIF           reduce using rule 72 (empty -> .)
    ENDWHILE        reduce using rule 72 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    string_decl                    shift and go to state 7
    decl                           shift and go to state 16
    empty                          shift and go to state 12
    var_decl                       shift and go to state 13
    var_type                       shift and go to state 10

state 8

    (11) var_type -> INT .

    IDENTIFIER      reduce using rule 11 (var_type -> INT .)


state 9

    (10) var_type -> FLOAT .

    IDENTIFIER      reduce using rule 10 (var_type -> FLOAT .)


state 10

    (9) var_decl -> var_type . id_list SEMICOLON
    (14) id_list -> . id id_tail
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 17
    id_list                        shift and go to state 18

state 11

    (3) pgm_body -> decl . func_declarations
    (22) func_declarations -> . func_decl func_declarations
    (23) func_declarations -> . empty
    (24) func_decl -> . start_of_func LPAREN param_decl_list RPAREN BEGIN func_body END
    (72) empty -> .
    (25) start_of_func -> . FUNCTION any_type id

    END             reduce using rule 72 (empty -> .)
    FUNCTION        shift and go to state 19

    empty                          shift and go to state 23
    func_decl                      shift and go to state 20
    start_of_func                  shift and go to state 22
    func_declarations              shift and go to state 21

state 12

    (6) decl -> empty .

    READ            reduce using rule 6 (decl -> empty .)
    WRITE           reduce using rule 6 (decl -> empty .)
    RETURN          reduce using rule 6 (decl -> empty .)
    IF              reduce using rule 6 (decl -> empty .)
    WHILE           reduce using rule 6 (decl -> empty .)
    IDENTIFIER      reduce using rule 6 (decl -> empty .)
    END             reduce using rule 6 (decl -> empty .)
    ENDIF           reduce using rule 6 (decl -> empty .)
    FUNCTION        reduce using rule 6 (decl -> empty .)
    ELSE            reduce using rule 6 (decl -> empty .)
    ENDWHILE        reduce using rule 6 (decl -> empty .)


state 13

    (5) decl -> var_decl . decl
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id ASSIGN str SEMICOLON
    (9) var_decl -> . var_type id_list SEMICOLON
    (72) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 6
    FUNCTION        reduce using rule 72 (empty -> .)
    END             reduce using rule 72 (empty -> .)
    READ            reduce using rule 72 (empty -> .)
    WRITE           reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    IDENTIFIER      reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    ENDIF           reduce using rule 72 (empty -> .)
    ENDWHILE        reduce using rule 72 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    decl                           shift and go to state 24
    var_decl                       shift and go to state 13
    empty                          shift and go to state 12
    string_decl                    shift and go to state 7
    var_type                       shift and go to state 10

state 14

    (1) program -> PROGRAM id BEGIN pgm_body . END

    END             shift and go to state 25


state 15

    (7) string_decl -> STRING id . ASSIGN str SEMICOLON

    ASSIGN          shift and go to state 26


state 16

    (4) decl -> string_decl decl .

    READ            reduce using rule 4 (decl -> string_decl decl .)
    WRITE           reduce using rule 4 (decl -> string_decl decl .)
    RETURN          reduce using rule 4 (decl -> string_decl decl .)
    IF              reduce using rule 4 (decl -> string_decl decl .)
    WHILE           reduce using rule 4 (decl -> string_decl decl .)
    IDENTIFIER      reduce using rule 4 (decl -> string_decl decl .)
    END             reduce using rule 4 (decl -> string_decl decl .)
    ENDIF           reduce using rule 4 (decl -> string_decl decl .)
    FUNCTION        reduce using rule 4 (decl -> string_decl decl .)
    ELSE            reduce using rule 4 (decl -> string_decl decl .)
    ENDWHILE        reduce using rule 4 (decl -> string_decl decl .)


state 17

    (14) id_list -> id . id_tail
    (15) id_tail -> . COMMA id id_tail
    (16) id_tail -> . empty
    (72) empty -> .

    COMMA           shift and go to state 27
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)

    empty                          shift and go to state 28
    id_tail                        shift and go to state 29

state 18

    (9) var_decl -> var_type id_list . SEMICOLON

    SEMICOLON       shift and go to state 30


state 19

    (25) start_of_func -> FUNCTION . any_type id
    (12) any_type -> . var_type
    (13) any_type -> . VOID
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    VOID            shift and go to state 32
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    var_type                       shift and go to state 33
    any_type                       shift and go to state 31

state 20

    (22) func_declarations -> func_decl . func_declarations
    (22) func_declarations -> . func_decl func_declarations
    (23) func_declarations -> . empty
    (24) func_decl -> . start_of_func LPAREN param_decl_list RPAREN BEGIN func_body END
    (72) empty -> .
    (25) start_of_func -> . FUNCTION any_type id

    END             reduce using rule 72 (empty -> .)
    FUNCTION        shift and go to state 19

    empty                          shift and go to state 23
    func_decl                      shift and go to state 20
    func_declarations              shift and go to state 34
    start_of_func                  shift and go to state 22

state 21

    (3) pgm_body -> decl func_declarations .

    END             reduce using rule 3 (pgm_body -> decl func_declarations .)


state 22

    (24) func_decl -> start_of_func . LPAREN param_decl_list RPAREN BEGIN func_body END

    LPAREN          shift and go to state 35


state 23

    (23) func_declarations -> empty .

    END             reduce using rule 23 (func_declarations -> empty .)


state 24

    (5) decl -> var_decl decl .

    READ            reduce using rule 5 (decl -> var_decl decl .)
    WRITE           reduce using rule 5 (decl -> var_decl decl .)
    RETURN          reduce using rule 5 (decl -> var_decl decl .)
    IF              reduce using rule 5 (decl -> var_decl decl .)
    WHILE           reduce using rule 5 (decl -> var_decl decl .)
    IDENTIFIER      reduce using rule 5 (decl -> var_decl decl .)
    END             reduce using rule 5 (decl -> var_decl decl .)
    ENDIF           reduce using rule 5 (decl -> var_decl decl .)
    FUNCTION        reduce using rule 5 (decl -> var_decl decl .)
    ELSE            reduce using rule 5 (decl -> var_decl decl .)
    ENDWHILE        reduce using rule 5 (decl -> var_decl decl .)


state 25

    (1) program -> PROGRAM id BEGIN pgm_body END .

    $end            reduce using rule 1 (program -> PROGRAM id BEGIN pgm_body END .)


state 26

    (7) string_decl -> STRING id ASSIGN . str SEMICOLON
    (8) str -> . STRINGLITERAL

    STRINGLITERAL   shift and go to state 36

    str                            shift and go to state 37

state 27

    (15) id_tail -> COMMA . id id_tail
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 38

state 28

    (16) id_tail -> empty .

    SEMICOLON       reduce using rule 16 (id_tail -> empty .)
    RPAREN          reduce using rule 16 (id_tail -> empty .)


state 29

    (14) id_list -> id id_tail .

    SEMICOLON       reduce using rule 14 (id_list -> id id_tail .)
    RPAREN          reduce using rule 14 (id_list -> id id_tail .)


state 30

    (9) var_decl -> var_type id_list SEMICOLON .

    STRING          reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    FLOAT           reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    INT             reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    READ            reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    WRITE           reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    RETURN          reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    IF              reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    WHILE           reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    IDENTIFIER      reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    END             reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    ELSE            reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    ENDIF           reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    FUNCTION        reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)
    ENDWHILE        reduce using rule 9 (var_decl -> var_type id_list SEMICOLON .)


state 31

    (25) start_of_func -> FUNCTION any_type . id
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 39

state 32

    (13) any_type -> VOID .

    IDENTIFIER      reduce using rule 13 (any_type -> VOID .)


state 33

    (12) any_type -> var_type .

    IDENTIFIER      reduce using rule 12 (any_type -> var_type .)


state 34

    (22) func_declarations -> func_decl func_declarations .

    END             reduce using rule 22 (func_declarations -> func_decl func_declarations .)


state 35

    (24) func_decl -> start_of_func LPAREN . param_decl_list RPAREN BEGIN func_body END
    (17) param_decl_list -> . param_decl param_decl_tail
    (18) param_decl_list -> . empty
    (19) param_decl -> . var_type id
    (72) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    RPAREN          reduce using rule 72 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    empty                          shift and go to state 42
    param_decl                     shift and go to state 40
    param_decl_list                shift and go to state 43
    var_type                       shift and go to state 41

state 36

    (8) str -> STRINGLITERAL .

    SEMICOLON       reduce using rule 8 (str -> STRINGLITERAL .)


state 37

    (7) string_decl -> STRING id ASSIGN str . SEMICOLON

    SEMICOLON       shift and go to state 44


state 38

    (15) id_tail -> COMMA id . id_tail
    (15) id_tail -> . COMMA id id_tail
    (16) id_tail -> . empty
    (72) empty -> .

    COMMA           shift and go to state 27
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)

    empty                          shift and go to state 28
    id_tail                        shift and go to state 45

state 39

    (25) start_of_func -> FUNCTION any_type id .

    LPAREN          reduce using rule 25 (start_of_func -> FUNCTION any_type id .)


state 40

    (17) param_decl_list -> param_decl . param_decl_tail
    (20) param_decl_tail -> . COMMA param_decl param_decl_tail
    (21) param_decl_tail -> . empty
    (72) empty -> .

    COMMA           shift and go to state 46
    RPAREN          reduce using rule 72 (empty -> .)

    empty                          shift and go to state 48
    param_decl_tail                shift and go to state 47

state 41

    (19) param_decl -> var_type . id
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 49

state 42

    (18) param_decl_list -> empty .

    RPAREN          reduce using rule 18 (param_decl_list -> empty .)


state 43

    (24) func_decl -> start_of_func LPAREN param_decl_list . RPAREN BEGIN func_body END

    RPAREN          shift and go to state 50


state 44

    (7) string_decl -> STRING id ASSIGN str SEMICOLON .

    STRING          reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    FLOAT           reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    INT             reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    READ            reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    WRITE           reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    RETURN          reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    IF              reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    WHILE           reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    IDENTIFIER      reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    ENDWHILE        reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    FUNCTION        reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    END             reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    ENDIF           reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)
    ELSE            reduce using rule 7 (string_decl -> STRING id ASSIGN str SEMICOLON .)


state 45

    (15) id_tail -> COMMA id id_tail .

    SEMICOLON       reduce using rule 15 (id_tail -> COMMA id id_tail .)
    RPAREN          reduce using rule 15 (id_tail -> COMMA id id_tail .)


state 46

    (20) param_decl_tail -> COMMA . param_decl param_decl_tail
    (19) param_decl -> . var_type id
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    param_decl                     shift and go to state 51
    var_type                       shift and go to state 41

state 47

    (17) param_decl_list -> param_decl param_decl_tail .

    RPAREN          reduce using rule 17 (param_decl_list -> param_decl param_decl_tail .)


state 48

    (21) param_decl_tail -> empty .

    RPAREN          reduce using rule 21 (param_decl_tail -> empty .)


state 49

    (19) param_decl -> var_type id .

    COMMA           reduce using rule 19 (param_decl -> var_type id .)
    RPAREN          reduce using rule 19 (param_decl -> var_type id .)


state 50

    (24) func_decl -> start_of_func LPAREN param_decl_list RPAREN . BEGIN func_body END

    BEGIN           shift and go to state 52


state 51

    (20) param_decl_tail -> COMMA param_decl . param_decl_tail
    (20) param_decl_tail -> . COMMA param_decl param_decl_tail
    (21) param_decl_tail -> . empty
    (72) empty -> .

    COMMA           shift and go to state 46
    RPAREN          reduce using rule 72 (empty -> .)

    empty                          shift and go to state 48
    param_decl_tail                shift and go to state 53

state 52

    (24) func_decl -> start_of_func LPAREN param_decl_list RPAREN BEGIN . func_body END
    (26) func_body -> . decl stmt_list
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id ASSIGN str SEMICOLON
    (9) var_decl -> . var_type id_list SEMICOLON
    (72) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 6
    READ            reduce using rule 72 (empty -> .)
    WRITE           reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    IDENTIFIER      reduce using rule 72 (empty -> .)
    END             reduce using rule 72 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 8

    string_decl                    shift and go to state 7
    var_decl                       shift and go to state 13
    var_type                       shift and go to state 10
    decl                           shift and go to state 54
    empty                          shift and go to state 12
    func_body                      shift and go to state 55

state 53

    (20) param_decl_tail -> COMMA param_decl param_decl_tail .

    RPAREN          reduce using rule 20 (param_decl_tail -> COMMA param_decl param_decl_tail .)


state 54

    (26) func_body -> decl . stmt_list
    (27) stmt_list -> . stmt stmt_list
    (28) stmt_list -> . empty
    (29) stmt -> . base_stmt
    (30) stmt -> . if_stmt
    (31) stmt -> . while_stmt
    (72) empty -> .
    (32) base_stmt -> . assign_stmt
    (33) base_stmt -> . read_stmt
    (34) base_stmt -> . write_stmt
    (35) base_stmt -> . return_stmt
    (62) if_stmt -> . start_if LPAREN cond RPAREN decl stmt_list else_part ENDIF
    (69) while_stmt -> . start_while LPAREN cond RPAREN decl stmt_list end_while
    (36) assign_stmt -> . assign_expr SEMICOLON
    (38) read_stmt -> . READ LPAREN id_list RPAREN SEMICOLON
    (39) write_stmt -> . WRITE LPAREN id_list RPAREN SEMICOLON
    (40) return_stmt -> . RETURN expr SEMICOLON
    (63) start_if -> . IF
    (70) start_while -> . WHILE
    (37) assign_expr -> . id ASSIGN expr
    (2) id -> . IDENTIFIER

    END             reduce using rule 72 (empty -> .)
    READ            shift and go to state 59
    WRITE           shift and go to state 61
    RETURN          shift and go to state 63
    IF              shift and go to state 71
    WHILE           shift and go to state 60
    IDENTIFIER      shift and go to state 4

    assign_expr                    shift and go to state 64
    base_stmt                      shift and go to state 68
    while_stmt                     shift and go to state 56
    assign_stmt                    shift and go to state 57
    if_stmt                        shift and go to state 67
    id                             shift and go to state 65
    read_stmt                      shift and go to state 58
    start_if                       shift and go to state 66
    empty                          shift and go to state 69
    return_stmt                    shift and go to state 62
    start_while                    shift and go to state 70
    write_stmt                     shift and go to state 72
    stmt_list                      shift and go to state 73
    stmt                           shift and go to state 74

state 55

    (24) func_decl -> start_of_func LPAREN param_decl_list RPAREN BEGIN func_body . END

    END             shift and go to state 75


state 56

    (31) stmt -> while_stmt .

    READ            reduce using rule 31 (stmt -> while_stmt .)
    WRITE           reduce using rule 31 (stmt -> while_stmt .)
    RETURN          reduce using rule 31 (stmt -> while_stmt .)
    IF              reduce using rule 31 (stmt -> while_stmt .)
    WHILE           reduce using rule 31 (stmt -> while_stmt .)
    IDENTIFIER      reduce using rule 31 (stmt -> while_stmt .)
    END             reduce using rule 31 (stmt -> while_stmt .)
    ELSE            reduce using rule 31 (stmt -> while_stmt .)
    ENDIF           reduce using rule 31 (stmt -> while_stmt .)
    ENDWHILE        reduce using rule 31 (stmt -> while_stmt .)


state 57

    (32) base_stmt -> assign_stmt .

    READ            reduce using rule 32 (base_stmt -> assign_stmt .)
    WRITE           reduce using rule 32 (base_stmt -> assign_stmt .)
    RETURN          reduce using rule 32 (base_stmt -> assign_stmt .)
    IF              reduce using rule 32 (base_stmt -> assign_stmt .)
    WHILE           reduce using rule 32 (base_stmt -> assign_stmt .)
    IDENTIFIER      reduce using rule 32 (base_stmt -> assign_stmt .)
    END             reduce using rule 32 (base_stmt -> assign_stmt .)
    ELSE            reduce using rule 32 (base_stmt -> assign_stmt .)
    ENDIF           reduce using rule 32 (base_stmt -> assign_stmt .)
    ENDWHILE        reduce using rule 32 (base_stmt -> assign_stmt .)


state 58

    (33) base_stmt -> read_stmt .

    READ            reduce using rule 33 (base_stmt -> read_stmt .)
    WRITE           reduce using rule 33 (base_stmt -> read_stmt .)
    RETURN          reduce using rule 33 (base_stmt -> read_stmt .)
    IF              reduce using rule 33 (base_stmt -> read_stmt .)
    WHILE           reduce using rule 33 (base_stmt -> read_stmt .)
    IDENTIFIER      reduce using rule 33 (base_stmt -> read_stmt .)
    END             reduce using rule 33 (base_stmt -> read_stmt .)
    ELSE            reduce using rule 33 (base_stmt -> read_stmt .)
    ENDIF           reduce using rule 33 (base_stmt -> read_stmt .)
    ENDWHILE        reduce using rule 33 (base_stmt -> read_stmt .)


state 59

    (38) read_stmt -> READ . LPAREN id_list RPAREN SEMICOLON

    LPAREN          shift and go to state 76


state 60

    (70) start_while -> WHILE .

    LPAREN          reduce using rule 70 (start_while -> WHILE .)


state 61

    (39) write_stmt -> WRITE . LPAREN id_list RPAREN SEMICOLON

    LPAREN          shift and go to state 77


state 62

    (35) base_stmt -> return_stmt .

    READ            reduce using rule 35 (base_stmt -> return_stmt .)
    WRITE           reduce using rule 35 (base_stmt -> return_stmt .)
    RETURN          reduce using rule 35 (base_stmt -> return_stmt .)
    IF              reduce using rule 35 (base_stmt -> return_stmt .)
    WHILE           reduce using rule 35 (base_stmt -> return_stmt .)
    IDENTIFIER      reduce using rule 35 (base_stmt -> return_stmt .)
    END             reduce using rule 35 (base_stmt -> return_stmt .)
    ELSE            reduce using rule 35 (base_stmt -> return_stmt .)
    ENDIF           reduce using rule 35 (base_stmt -> return_stmt .)
    ENDWHILE        reduce using rule 35 (base_stmt -> return_stmt .)


state 63

    (40) return_stmt -> RETURN . expr SEMICOLON
    (41) expr -> . expr_prefix factor
    (42) expr_prefix -> . expr_prefix factor addop
    (43) expr_prefix -> . empty
    (72) empty -> .

    LPAREN          reduce using rule 72 (empty -> .)
    INTLITERAL      reduce using rule 72 (empty -> .)
    FLOATLITERAL    reduce using rule 72 (empty -> .)
    IDENTIFIER      reduce using rule 72 (empty -> .)

    expr_prefix                    shift and go to state 78
    empty                          shift and go to state 79
    expr                           shift and go to state 80

state 64

    (36) assign_stmt -> assign_expr . SEMICOLON

    SEMICOLON       shift and go to state 81


state 65

    (37) assign_expr -> id . ASSIGN expr

    ASSIGN          shift and go to state 82


state 66

    (62) if_stmt -> start_if . LPAREN cond RPAREN decl stmt_list else_part ENDIF

    LPAREN          shift and go to state 83


state 67

    (30) stmt -> if_stmt .

    READ            reduce using rule 30 (stmt -> if_stmt .)
    WRITE           reduce using rule 30 (stmt -> if_stmt .)
    RETURN          reduce using rule 30 (stmt -> if_stmt .)
    IF              reduce using rule 30 (stmt -> if_stmt .)
    WHILE           reduce using rule 30 (stmt -> if_stmt .)
    IDENTIFIER      reduce using rule 30 (stmt -> if_stmt .)
    END             reduce using rule 30 (stmt -> if_stmt .)
    ELSE            reduce using rule 30 (stmt -> if_stmt .)
    ENDIF           reduce using rule 30 (stmt -> if_stmt .)
    ENDWHILE        reduce using rule 30 (stmt -> if_stmt .)


state 68

    (29) stmt -> base_stmt .

    READ            reduce using rule 29 (stmt -> base_stmt .)
    WRITE           reduce using rule 29 (stmt -> base_stmt .)
    RETURN          reduce using rule 29 (stmt -> base_stmt .)
    IF              reduce using rule 29 (stmt -> base_stmt .)
    WHILE           reduce using rule 29 (stmt -> base_stmt .)
    IDENTIFIER      reduce using rule 29 (stmt -> base_stmt .)
    END             reduce using rule 29 (stmt -> base_stmt .)
    ELSE            reduce using rule 29 (stmt -> base_stmt .)
    ENDIF           reduce using rule 29 (stmt -> base_stmt .)
    ENDWHILE        reduce using rule 29 (stmt -> base_stmt .)


state 69

    (28) stmt_list -> empty .

    ENDWHILE        reduce using rule 28 (stmt_list -> empty .)
    END             reduce using rule 28 (stmt_list -> empty .)
    ELSE            reduce using rule 28 (stmt_list -> empty .)
    ENDIF           reduce using rule 28 (stmt_list -> empty .)


state 70

    (69) while_stmt -> start_while . LPAREN cond RPAREN decl stmt_list end_while

    LPAREN          shift and go to state 84


state 71

    (63) start_if -> IF .

    LPAREN          reduce using rule 63 (start_if -> IF .)


state 72

    (34) base_stmt -> write_stmt .
